# PhysicsEngine

./: .gitignore  CMakeLists.txt  README.md
include/: App.h
include/components/: CameraComponent.h  DirectionalLightComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  PointLightComponent.h  ShaderComponent.h  SpotLightComponent.h  TransformComponent.h
include/ecs/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  SystemManager.h  Types.h
include/managers/: MeshManager.h  ShaderManager.h  UniformBufferManager.h
include/render/: Mesh.h
include/render/uniforms/: CameraUBO.h  DirectionalLightUBO.h  LightUBO.h  MaterialUBO.h  PointLightUBO.h  SpotLightUBO.h
include/systems/: CameraSystem.h  DirectionalLightSystem.h  LightSystem.h  MaterialSystem.h  PointLightSystem.h  RenderSystem.h  SpotLightSystem.h
resources/shaders/: color.frag  cube1.frag  default.frag  default.vert  light.frag  pointLight.frag  spotLight.frag
src/: App.cpp  main.cpp
src/managers/: MeshManager.cpp  ShaderManager.cpp
src/render/: Mesh.cpp
src/systems/: CameraSystem.cpp  DirectionalLightSystem.cpp  LightSystem.cpp  MaterialSystem.cpp  PointLightSystem.cpp  RenderSystem.cpp  SpotLightSystem.cpp
